--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <label class="label">Diamètre moyen du ressort:</label>
           <div class="field has-addons has-addons-fullwidth">
             <p class="control">
-              <input class="input springDiam" type="number" placeholder="diamètre extérieur en millimètre" step=
+              <input class="input springDiam" type="number" placeholder="Diamètre moyen du ressort" step=
               0.01 id="sensorSpringDiam">
             </p>
             <p class="control">
@@ -53,7 +53,7 @@
           <label class="label">Tolérance ± au diamètre:</label>
           <div class="field has-addons has-addons-fullwidth">
             <p class="control">
-              <input class="input diamTolerance" type="number" placeholder="diamètre extérieur en millimètre" step=
+              <input class="input diamTolerance" type="number" placeholder="Tolérance ± au diamètre" step=
               0.01 id="sensorDiamTolerance">
             </p>
             <p class="control">
@@ -63,13 +63,14 @@
           <label class="label">Nombre de spires:</label>
           <div class="field has-addons has-addons-fullwidth">
             <p class="control">
-              <input class="input numberOfCoils" type="number" placeholder="diamètre extérieur en millimètre" step=
+              <input class="input numberOfCoils" type="number" placeholder="Nombre de spires:" step=
               0.01 id="sensorNumberOfCoils">
             </p>
             <p class="control">
               <a class="button is-static">spires</a>
             </p>
           </div>
+
           <!--Buttons group-->
           <div class="field is-grouped">
             <div class="control">
@@ -81,7 +82,7 @@
         <div class="hero-body">
           <p class="title" id="sensorFeedResult">
           </p>
-          <p class="subtitle" id"entireResult">
+          <p class="subtitle" id="entireResult">
           </p>
         </div>
       </section>
